Virtual threads are used